# moji

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  game.c  game.glsl  init.sh  net.md  renderer.h  web_init.sh
client/: client.glsl  ent.h  main.c  renderer.h  stb_image.h  ui.h
client/img/: emoji.bat  emoji.sh  emoji.txt
client/mui/: atlas.inl  microui.c  microui.h  mui_renderer.c
client/ui/: login_window.h
common/: common.h  formpack_gen.c  mapgen.h  math.h
formpack/: CMakeLists.txt  formpack.dd  gen.c
mui/: atlas.inl  mui_renderer.c
server/: main.c
sokol/: sokol.c  sokol_gfx.h
